--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 rvm:
   - 2.2.3
+script:
+  - RAILS_ENV=test bundle exec rake
 before_script:
   - psql -c 'create database workshops_test;' -U postgres
 addons:
