--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ rvm:
   - 2.2.3
 before_script:
   - psql -c 'create database workshops_test;' -U postgres
+  - cp config/database.yml.sample config/database.yml
 addons:
   postgresql: '9.3'
+services:
+  - postgresql
