--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_script:
   - psql -c 'CREATE USER workshops WITH SUPERUSER;' -U postgres
   - psql -c 'create database workshops_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
+script:
+  – RAILS_ENV=test bundle exec rake –trace db:migrate spec
 addons:
   postgresql: '9.3'
 services:
