--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
   - psql -c 'create database workshops_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
 script:
-  – RAILS_ENV=test bundle exec rake –trace db:migrate spec
+  – RAILS_ENV=test bundle exec rspec
 addons:
   postgresql: '9.3'
 services:
