--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
 script:
   - RAILS_ENV=test rake db:migrate
   - rake db:test:prepare
+  - RAILS_ENV=test bundle exec rspec
 addons:
   postgresql: '9.3'
 services:
