--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_script:
   - psql -c 'create database workshops_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
 script:
+  - RAILS_ENV=test rake db:migrate
+  - rake db:test:prepare
   - RAILS_ENV=test bundle exec rspec
 addons:
   postgresql: '9.3'
