--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 rvm:
   - 2.2.3
 before_script:
+  - rake db:migrate
+  - rake db:test:prepare
   - psql -c 'CREATE USER workshops WITH SUPERUSER;' -U postgres
   - psql -c 'create database workshops_test;' -U postgres
-  - cp config/database.yml.travis config/database.yml
+  - cp config/database.yml.sample config/database.yml
 script:
-  - RAILS_ENV=test rake db:migrate
-  - rake db:test:prepare
   - RAILS_ENV=test bundle exec rspec
 addons:
   postgresql: '9.3'
