--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ rvm:
 before_script:
   - psql -c 'CREATE USER workshops;' -U postgres
   - psql -c 'ALTER USER workshops WITH SUPERUSER;' -U postgres
-  - psql -c 'create database workshops_test;' -U postgres
+  - psql -c 'CREATE DATABASE workshops_development;' -U postgres
   - cp config/database.yml.sample config/database.yml
-addons:
-  postgresql: '9.3'
 services:
   - postgresql
+addons:
+  postgresql: '9.3'
